# arbor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  clippy.toml  justfile  manifest  om2drndbqreogupludil9sc5adjkmts8.darc  rust-toolchain.toml  rustfmt.toml
.beads/: metadata.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  static.yml
crates/arbor-core/: Cargo.toml
crates/arbor-core/src/: agent.rs  changes.rs  daemon.rs  lib.rs  outpost.rs  outpost_store.rs  process.rs  remote.rs  repo_config.rs  session.rs  worktree.rs  worktree_scripts.rs
crates/arbor-core/tests/: changes_integration.rs  worktree_integration.rs
crates/arbor-daemon-client/src/: types.rs
crates/arbor-gui/: Cargo.toml
crates/arbor-gui/src/: actions.rs  agent_activity.rs  agent_chat_stubs.rs  agent_presets.rs  app_bootstrap.rs  app_config.rs  app_init.rs  background_pollers.rs  center_panel.rs  changes_pane.rs  command_palette.rs  config_refresh.rs  connection_history.rs  constants.rs  daemon_connection_ui.rs  daemon_runtime.rs  diff_view.rs  external_launchers.rs  file_view.rs  git_actions.rs  github_auth_modal.rs  github_auth_store.rs  github_helpers.rs  github_oauth.rs  github_pr_refresh.rs  github_service.rs  helpers.rs  issue_details_modal.rs  log_view.rs  main.rs  manage_hosts.rs  mdns_browser.rs  notifications.rs  pr_summary_ui.rs  prompt_runner.rs  rendering.rs  repo_presets.rs  repository_store.rs  settings_ui.rs  sidebar.rs  (+18 more)
crates/arbor-httpd/: Cargo.toml
crates/arbor-httpd/src/: auth.rs  github_service.rs  main.rs  process_manager.rs  process_metrics.rs  repository_store.rs  routes.rs  startup.rs  terminal_daemon.rs  types.rs
crates/arbor-mcp/: Cargo.toml
crates/arbor-mcp/src/: lib.rs  main.rs
crates/arbor-mosh/: Cargo.toml
crates/arbor-mosh/src/: detect.rs  handshake.rs  lib.rs  shell.rs
crates/arbor-ssh/: Cargo.toml
crates/arbor-ssh/src/: command.rs  connection.rs  lib.rs  provisioner.rs  shell.rs
crates/arbor-symphony/src/: codex.rs  service.rs  tracker.rs  workflow.rs  workspace.rs
crates/arbor-terminal-emulator/: Cargo.toml
crates/arbor-terminal-emulator/src/: alacritty_emulator.rs  alacritty_support.rs  ghostty_vt_experimental.rs  lib.rs
crates/arbor-tui/: Cargo.toml  README.md
crates/arbor-tui/config/: default.toml
crates/arbor-tui/src/: app.rs  capture.rs  client.rs  event.rs  header.rs  hooks.rs  main.rs
crates/arbor-tui/src/tabs/: agents.rs
crates/arbor-tui/src/tabs/snapshots/: arbor_tui__tabs__agents__tests__snapshot_auto_discovered_columns.snap  arbor_tui__tabs__agents__tests__snapshot_both_collapsed.snap  arbor_tui__tabs__agents__tests__snapshot_detail_overlay_no_metadata.snap  arbor_tui__tabs__agents__tests__snapshot_detail_overlay_with_metadata.snap  arbor_tui__tabs__agents__tests__snapshot_empty_state.snap  arbor_tui__tabs__agents__tests__snapshot_help_overlay.snap  arbor_tui__tabs__agents__tests__snapshot_hidden_only_metadata.snap  arbor_tui__tabs__agents__tests__snapshot_input_bar.snap  arbor_tui__tabs__agents__tests__snapshot_meta_collapsed.snap  arbor_tui__tabs__agents__tests__snapshot_multiple_agents.snap  arbor_tui__tabs__agents__tests__snapshot_rich_metadata_columns.snap  arbor_tui__tabs__agents__tests__snapshot_single_agent_no_metadata.snap  arbor_tui__tabs__agents__tests__snapshot_single_agent_with_metadata.snap  arbor_tui__tabs__agents__tests__snapshot_table_collapsed.snap  arbor_tui__tabs__agents__tests__snapshot_with_terminal_pane.snap
crates/arbor-tui/src/widgets/: list_detail.rs  mod.rs  status_bar.rs
crates/arbor-web-ui/app/: index.html  package-lock.json  package.json
crates/arbor-web-ui/app/e2e/: app.spec.ts
crates/arbor-web-ui/app/src/: api.ts  main.ts  state.ts  types.ts
crates/arbor-web-ui/app/src/components/: agent-panel.ts  changes-panel.ts  command-palette.ts  sidebar.ts  terminal-panel.ts
crates/arbor-web-ui/app/src/styles/: agent-chat.css  changes.css  layout.css  overlays.css  sidebar.css  terminal.css  variables.css
crates/arbor-web-ui/src/: lib.rs
docs/: daemon-contract.md
docs/src/: automation-and-repo-config.md  github-agents-and-git.md  qa-checklist.md  themes-settings-and-notifications.md
packaging/macos/: Info.plist
scripts/: build-ghostty-vt-bridge.sh
scripts/ci/: package-linux.sh  package-macos.sh  package-windows.ps1  update-homebrew-cask.sh  verify-macos-deployment-target.sh
scripts/dev/: arbor-perf-harness.sh
scripts/ghostty-vt/: arbor_bridge.zig
website/: README.md  index.html  main.js
website/docs/: development.html  index.html  remote-access.html
