[package]
name = "arbor-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
git2 = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true, features = ["blob-experimental"] }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
