[package]
name = "arbor-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
vendored-openssl = ["openssl-sys/vendored"]

[dependencies]
config = { workspace = true }
openssl-sys = { version = "0.9", optional = true }
git2 = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true, features = ["blob-experimental"] }
schemars = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
