[package]
name = "arbor-gui"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "Arbor"
path = "src/main.rs"

[dependencies]
arbor-core = { path = "../arbor-core" }
alacritty_terminal = { workspace = true }
config = { workspace = true }
gix-diff = { workspace = true, features = ["blob-experimental"] }
gpui = { workspace = true }
imara-diff = { workspace = true }
portable-pty = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }

[lints]
workspace = true
