[package]
name = "arbor-mcp"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "arbor-mcp"
path = "src/main.rs"
required-features = ["stdio-server"]

[features]
default = ["stdio-server"]
stdio-server = []
vendored-openssl = ["arbor-core/vendored-openssl"]

[dependencies]
anyhow = { workspace = true }
arbor-daemon-client = { path = "../arbor-daemon-client" }
arbor-core = { path = "../arbor-core" }
rmcp = { version = "1", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
serde = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
